@@ -75,8 +75,8 @@ static __command struct command_d c_xreceive = {
 "xreceive REGION\n"
 "  Receive binary data via the console using Xmodem protocol.\n"
 "  Data is written directly to REGION.\n"
-"  The length of the DST region is ignored.\n\n"
+"  The length of REGION is ignored.\n\n"
 "  e.g.  xreceive 0x2001000    # Receive and write to SDRAM\n"
-"        xreceive nor:0        # Receive and write to flash\n"
+"        xreceive nor:0        # Receive and write to NOR flash\n"
   )
 };
